--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ numpy = "^1.26.4"
 matplotlib = "^3.8.2"
 seaborn = "^0.13.2"
 scikit-learn = "^1.4.0"
+gitpython = "^3.1.42"
+python-dotenv = "^1.0.1"
 
 
 [build-system]
