--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = ">=3.9, <3.12"
 clearml = "^1.14.2"
-tensorflow = "^2.13.0"
-numpy = "^1.26.4"
+tensorflow = "2.13.0"
+numpy = ">=1.22,<=1.24.3"
 matplotlib = "^3.8.2"
 seaborn = "^0.13.2"
 scikit-learn = "^1.4.0"
